--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-google-maps/api": "^2.19.3",
     "@types/googlemaps": "^3.43.3",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.11"
   },
